--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/* Variables */
+:root {
+  --white-color: #fff;
+  --black-color: #000;
+}
+
+/* All */
 * {
   margin: 0;
   padding: 0;
@@ -5,10 +12,15 @@
   font-family: 'Poppins', sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   min-height: 100px;
 }
 
+/*Menu */
 header {
   position: fixed;
   top: 0;
@@ -24,14 +36,14 @@ header {
 
 header.sticky {
   padding: 5px 100px;
-  background: #fff;
-  border-bottom: 1px solid(0, 0, 0, 0.1);
+  background: var(--white-color);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 header .logo {
   position: relative;
   font-weight: 700;
-  color: #fff;
+  color: var(--white-color);
   text-decoration: none;
   font-size: 2em;
   text-transform: uppercase;
@@ -55,17 +67,20 @@ header ul li a {
   position: relative;
   margin: 0 20px;
   text-decoration: none;
-  color: #fff;
+  color: var(--white-color);
   letter-spacing: 5px;
   font-weight: 300;
   transition: 0.6s;
 }
 
 header.sticky .logo,
+header.sticky .sec-second,
+header.sticky .sec-quarter,
 header.sticky ul li a {
-  color: #000;
+  color: var(--black-color);
 }
 
+/* banner */
 .banner {
   position: relative;
   width: 100%;
@@ -78,7 +93,7 @@ header.sticky ul li a {
 }
 
 .banner h2 {
-  color: #fff;
+  color: var(--white-color);
   font-size: 90px;
   text-transform: uppercase;
   text-align: center;
@@ -87,4 +102,65 @@ header.sticky ul li a {
 
 .banner h2 span {
   color: #6edcd9;
+}
+
+/*web1 */
+.sec-one,
+.sec-third {
+  background: var(--white-color);
+  padding: 100px;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sec-one .content,
+.sec-second .content,
+.sec-third .content,
+.sec-quarter .content {
+  position: relative;
+  text-align: center;
+  width: 100%;
+}
+
+.sec-one .content-text,
+.sec-second .content-text,
+.sec-third .content-text,
+.sec-quarter .content-text {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+h3 {
+  font-size: 40px;
+  font-weight: 200;
+  margin-bottom: 10px;
+}
+
+p {
+  position: relative;
+  font-size: 18px;
+  font-weight: 300;
+  margin-bottom: 20px;
+  letter-spacing: 1px;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+/*web 2 and 4*/
+.sec-second,
+.sec-quarter {
+  background: var(--black-color);
+  color: var(--white-color);
+  padding: 100px;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
