--- a/style.css
+++ b/style.css
@@ -217,7 +217,8 @@ img {
     transition: 0.5s;
   }
 
-  header {
+  header,
+  header.sticky {
     padding: 5px 50px;
     background: var(--white-color);
   }
@@ -251,5 +252,21 @@ img {
   header .logo,
   header ul li a {
     color: var(--black-color);
+  }
+
+  .banner {
+    background-position: center;
+  }
+
+  .banner h2 {
+    font-size: 60px;
+    padding: 0 50px;
+  }
+
+  .sec-one,
+  .sec-second,
+  .sec-third,
+  .sec-quarter {
+    padding: 100px 50px 50px 50px;
   }
 }
